navbar mobile and desktop- fixed misaligned heights. On-scroll nav reappears, height was longer than bg-navbar

--- a/public/navbar.css
+++ b/public/navbar.css
@@ -54,16 +54,19 @@
   }
   
   .navbar-brand img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   
   .navbar-nav-left {
     text-transform: uppercase;
     flex: 1;
     margin-left: 20px;
+    margin-bottom: 0;
   }
-  
+  .navbar-nav-right{
+    margin-bottom: 0;
+  }
   .navbar-nav-right li:first-child a {
     display: flex;
     align-items: center;
